# QViewLinuxAndroid

./: .gitignore  BuildGuide.txt
jni/: Android.mk  Application.mk  CMakeLists.txt  DisplayBoard.cpp  DisplayBoard.hpp  DisplayProcessor.cpp  DisplayProcessor.hpp  OpenCVRenderer.cpp  OpenCVRenderer.hpp  Processor.cpp  Processor.hpp  Renderer.cpp  Renderer.hpp  RtspThread.cpp  RtspThread.hpp  ShowProcessor.cpp  ShowProcessor.hpp  config.h  main.cpp
jni/libopencv-4.5.0-android-armv7a-prebuilt/sdk/native/jni/: OpenCV.mk
jni/libopencv-4.5.0-android-armv7a-prebuilt/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
